1. Метод .of [#70623 #352902] Исправил input на Arrays.asList()